# jinx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: scan_test.cmake  scan_tests.cmake
docs/: Dockerfile  TODO.txt  jinx.code-snippets
docs/variant_benchmark/: .gitignore  variant_benchmark.cpp
include/jinx/: argparse.hpp  assert.hpp  async.hpp  buffer.hpp  error.hpp  eventengine.hpp  exception.hpp  hash.hpp  libevent.hpp  linkedlist.hpp  lock.hpp  logging.hpp  macros.hpp  meta.hpp  optional.hpp  overload.hpp  pointer.hpp  posix.hpp  queue.hpp  queue2.hpp  raii.hpp  record.hpp  result.hpp  resultstrict.hpp  slice.hpp  stream.hpp  streamsocket.hpp  variant.hpp
include/jinx/async/: awaitable.hpp  awaitable.ipp  pausable.hpp  task.hpp
libs/: CMakeLists.txt
libs/cjson/: CMakeLists.txt
libs/cjson/include/jinx/cjson/: cjson.hpp
libs/cjson/tests/: CMakeLists.txt  test_cjson.cpp
libs/evdns/: CMakeLists.txt
libs/evdns/include/jinx/evdns/: evdns.hpp
libs/evdns/src/: evdns.cpp
libs/evdns/tests/: CMakeLists.txt  test_evdns.cpp
libs/http/: CMakeLists.txt  http.cpp
libs/http/examples/http_server/: CMakeLists.txt  app.js  appdata.hpp  index.html  server.cpp  server.hpp  static.cpp  static.hpp  status.hpp
libs/http/include/jinx/http/: client.hpp  http.hpp  webapp.hpp
libs/http/tests/: CMakeLists.txt  test_http_build_request.cpp  test_http_build_response.cpp  test_http_parse_response.cpp  test_http_request.cpp  test_webapp_client_deep_page.cpp  test_webapp_client_internal_error.cpp  test_webapp_client_not_found.cpp  test_webapp_client_query_string.cpp  test_webapp_client_root_index.cpp  test_webapp_client_slot.cpp
libs/openssl/: CMakeLists.txt
libs/openssl/include/jinx/openssl/: bio.hpp  openssl.hpp
libs/openssl/src/: bio.cpp  openssl.cpp
libs/openssl/tests/: CMakeLists.txt  test_bio.cpp  test_stream_tls.cpp  tls_server.crt  tls_server.crt.h  tls_server.pem  tls_server.pem.h
scripts/: build-static.sh  gen-cov.sh
src/: argparse.cpp  async.cpp  error.cpp  eventengine.cpp  libevent.cpp  posix.cpp  stream.cpp
tests/: CMakeLists.txt  test_argparse.cpp  test_async_buffer.cpp  test_async_call_return.cpp  test_async_cancel.cpp  test_async_cancel_dead_task.cpp  test_async_cancel_new_task.cpp  test_async_cancel_suspend_task.cpp  test_async_cancel_yielded_task.cpp  test_async_exit.cpp  test_async_future.cpp  test_async_join.cpp  test_async_multi_base.cpp  test_async_pausable_finalize.cpp  test_async_pausable_multi.cpp  test_async_self_cancel.cpp  test_async_sleep.cpp  test_async_wait_all.cpp  test_async_wait_cancel.cpp  test_async_wait_error.cpp  test_async_wait_one.cpp  test_async_wait_timeout.cpp  test_async_wait_try_again.cpp  test_async_wait_yield.cpp  test_asyncio_cancel.cpp  test_asyncio_error.cpp  test_asyncio_read_suspend.cpp  test_asyncio_readv_writev.cpp  test_asyncio_sendmsg_recvmsg.cpp  test_asyncio_tcp.cpp  test_asyncio_udp.cpp  test_asyncio_write_suspend.cpp  test_buffer.cpp  test_buffer_reuse.cpp  test_exception.cpp  test_linkedlist.cpp  test_lock.cpp  test_lock_wake_loop.cpp  test_lock_wake_thread.cpp  test_optional.cpp  (+19 more)
